--- a/public/style.css
+++ b/public/style.css
@@ -34,7 +34,7 @@ form {
   display: flex;
   flex-direction: column;
   /* margin-top: 5px; */
-  width: 185px;
+  width: 190px;
   height: 200px;
   background-color: white;
   box-shadow: rgba(0, 0, 0 0.35) 0px 5px 15px;
@@ -50,7 +50,7 @@ form {
 
 .dataResult .dataIcon {
   width: 100%;
-  height: 40px;
+  height: 52px;
   /* display: flex;
   flex-direction: column; */
   align-items: center;
@@ -59,7 +59,7 @@ form {
 
 .dataIcon {
   margin: 0;
-  padding: 0.2rem;
+  /* padding: 0.15rem; */
 }
 
 a {
@@ -192,7 +192,6 @@ input:focus {
 
   border-bottom: 1px solid lightgray;
   align-items: center;
-
 }
 
 .navbar-user-itemLeft {
