--- a/public/style.css
+++ b/public/style.css
@@ -1446,8 +1446,6 @@ input:focus {
   justify-content: space-around;
 }
 
-
-
 .textfield {
 }
 
@@ -1467,23 +1465,36 @@ input:focus {
   .textfield {
     width: 200px;
   }
-
+}
 /* ------------ PageNotFound.js ---------------*/
 
 .errorDiv {
   display: flex;
   font-size: 75px;
   justify-content: center;
+  min-height: calc(100vh - 25vh);
 }
-  
+
 .errorImg {
   height: auto;
   width: 700px;
   margin: 50px;
-  margin-top: 125px;
-
+  margin-top: 200px;
 }
+@media only screen and (max-width: 600px) {
+  .errorDiv {
+    display: flex;
+    font-size: 75px;
+    justify-content: center;
+  }
 
+  .errorImg {
+    height: auto;
+    width: 500px;
+    margin: 10px;
+    margin-top: 100px;
+  }
+}
 
 /* ---------------Admin CSS--------------- */
 
